--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.8.12)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -Wno-shadow -Wno-sign-compare")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wno-shadow -Wno-sign-compare")
 set(CMAKE_CXX_STANDARD 11)
 
 project(start_tf)
@@ -10,26 +10,31 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
 set(DEPENDENCY_PREFIX "../../opensource/")
 set(INCLUDE_DIRS
-        ${DEPENDENCY_PREFIX}/tensorflow_and_paddle/tensorflow_install_v1.13.1/include
-        ${DEPENDENCY_PREFIX}/tensorflow_and_paddle/tensorflow_install_v1.13.1/include/abseil-cpp
-        ${DEPENDENCY_PREFIX}/tensorflow_and_paddle/tensorflow_install_v1.13.1/include/eigen_archive
-        ${DEPENDENCY_PREFIX}/xtra_rhel7.x/google_prefix/include/
-
-        ${DEPENDENCY_PREFIX}/roo/
-        )
+    ${DEPENDENCY_PREFIX}/tensorflow_and_paddle/tensorflow_install_v1.13.1/include
+    ${DEPENDENCY_PREFIX}/tensorflow_and_paddle/tensorflow_install_v1.13.1/include/abseil-cpp
+    ${DEPENDENCY_PREFIX}/tensorflow_and_paddle/tensorflow_install_v1.13.1/include/eigen_archive
+    ${DEPENDENCY_PREFIX}/xtra_rhel7.x/google_prefix/include/
+    ${DEPENDENCY_PREFIX}/roo/
+)
 include_directories( ${INCLUDE_DIRS} )
 
 link_directories(
-        ${DEPENDENCY_PREFIX}/tensorflow_and_paddle/tensorflow_install_v1.13.1/lib_monolithic/
+#        ${DEPENDENCY_PREFIX}/tensorflow_and_paddle/tensorflow_install_v1.13.1/lib_monolithic/
 #        ${DEPENDENCY_PREFIX}/tensorflow_and_paddle/tensorflow_install_v1.13.1/lib/
+    /home/user/repos/machine_learning/tensorflow_v1.13.z/bazel-bin/tensorflow
 )
 
-add_executable(start_tf main.cpp)
 
 set (EXTRA_LIBS ${EXTRA_LIBS} tensorflow_cc)
-#set (EXTRA_LIBS ${EXTRA_LIBS} tensorflow_cc tensorflow_framework)
-#set (EXTRA_LIBS ${EXTRA_LIBS} protobuf)
+
+add_executable(start_tf_mnist mnist.cc)
 target_link_libraries(
-        start_tf
-        ${EXTRA_LIBS}
+    start_tf_mnist
+    ${EXTRA_LIBS}
+)
+
+add_executable(start_tf_add add.cc)
+target_link_libraries(
+    start_tf_add
+    ${EXTRA_LIBS}
 )
